uploading mockup to main.

--- a/brewery_outdoor_analysis/machine_learning_mockup.ipynb
+++ b/brewery_outdoor_analysis/machine_learning_mockup.ipynb
@@ -19,8 +19,8 @@
         "*  Data is preprocessed and cleaned by removing unneeded columns, merging zip code/cities datasets, and limiting dataset to the top 1,000 most populated cities.\n",
         "*  To obtain the best possible predictive results, preliminary features should be explored, engineered, and carefully selected. Possible preliminary features for this model could be average income per zipcode, income per capita, and clothing stores per brewery count.\n",
         "*  The importance of correlation between breweries and outdoor clothing stores will drive which features will be engineered and selected, ultimately answering the hypthesis.\n",
-        "* (How the data was trained and tested)\n",
-        "* A linear regression model was chosen to best illustrate correlation between brewery location and outdoor clothing store location. Is there a strong relationship between the two? The benefits of using a linear regression is readability and abiility to answer basic questions. Limitations of a linear regression model will be sensitivity to outliers.\n",
+        "*  Data was split into training and testing sets using train_test_split and a random state of 24.\n",
+        "*  A linear regression model was chosen to best illustrate correlation between brewery location and outdoor clothing store location. Is there a strong relationship between the two? The benefits of using a linear regression is readability and abiility to answer basic questions. Limitations of a linear regression model will be sensitivity to outliers.\n",
         "\n",
         "\n",
         "\n"
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 66,
       "id": "b76fee5c",
       "metadata": {
         "colab": {
@@ -45,9 +45,13 @@
         "import pandas as pd\n",
         "from pathlib import Path\n",
         "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "\n",
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn.datasets import make_regression\n",
         "from sklearn.model_selection import train_test_split\n",
+        "from sklearn import preprocessing\n",
+        "\n",
         "from database_connection import ENGINE"
       ]
     },
@@ -58,7 +62,7 @@
         "id": "8MxDL1B6Zbyu"
       },
       "source": [
-        "# Test Linear Regression Model"
+        "**# Test Linear Regression Model**"
       ]
     },
     {
@@ -70,6 +74,7 @@
       },
       "outputs": [],
       "source": [
+        "\n",
         "X, y = make_regression(n_samples=100, n_features=1, random_state=24, noise=20, bias=50.0)"
       ]
     },
@@ -1020,6 +1025,13 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "a2e8d183",
       "metadata": {
         "id": "a2e8d183"
@@ -1031,7 +1043,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "id": "ec2fe383",
       "metadata": {
         "id": "ec2fe383"
@@ -1039,7 +1051,17 @@
       "outputs": [],
       "source": [
         "# Merge dataframe with demographic infro dataframe grouped by location\n",
-        "brewery_clothing_df = brewery_df.merge(clothing_df, )"
+        "#brewery_clothing_df = breweries_df.merge(outdoor_df, how='cross')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "a271ab77",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#brewery_clothing_df.head()"
       ]
     },
     {
@@ -1066,7 +1088,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "id": "8c829479",
       "metadata": {
         "id": "8c829479"
@@ -1074,8 +1096,8 @@
       "outputs": [],
       "source": [
         "# Scale data if needed (StandardScaler)\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "data_scaler = StandardScaler()"
+        "#from sklearn.preprocessing import StandardScaler\n",
+        "#data_scaler = StandardScaler()"
       ]
     },
     {
@@ -1087,9 +1109,9 @@
       },
       "outputs": [],
       "source": [
-        "brewery_scaled = data_scaler.fit(encoded_df)\n",
+        "#brewery_scaled = data_scaler.fit(encoded_df)\n",
         "\n",
-        "brewery_scaled[:5]"
+        "#brewery_scaled[:5]"
       ]
     },
     {
@@ -1100,6 +1122,19 @@
       },
       "source": [
         "# Data Transformation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "666858d7",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "plt.scatter(zip_codes.irs_estimated_population, outdoor_df.outdoor_store)\n",
+        "plt.xlabel('Population')\n",
+        "plt.ylabel('Outdoor Store')\n",
+        "plt.show()"
       ]
     },
     {
@@ -1129,6 +1164,17 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "f6c4cf75",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "X = \n",
+        "y = outdoor_df[outdoor_df.columns[1]].count()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "d6e6f5cf",
       "metadata": {
         "id": "d6e6f5cf"
@@ -1137,7 +1183,9 @@
       "source": [
         "# Set X and y \n",
         "# X = demographic info + number of Breweries per location(zipcode tabulation area?)\n",
-        "# y = number of stores"
+        "# y = number of stores\n",
+        "X = \n",
+        "y = outdoor_df[outdoor_df.columns[1]].count()"
       ]
     },
     {
@@ -1204,8 +1252,8 @@
       "outputs": [],
       "source": [
         "# Validate the model\n",
-        "# accuracy_score\n",
-        "acc_score = accuracy_score(y_test, predictions)\n",
+        "# accuracy_score (not using accuracy for linear regression)\n",
+        "#acc_score = accuracy_score(y_test, predictions)\n",
         "\n",
         "# confusion_matrix/classification_report\n",
         "cm = confusion_matrix(y_test, predictions)\n",
