add r squared value of the model

--- a/brewery_outdoor_analysis/machine_learning_mockup.ipynb
+++ b/brewery_outdoor_analysis/machine_learning_mockup.ipynb
@@ -1008,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "921e074f",
+   "id": "00f50e3a",
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "abdaa455",
+   "id": "0dd1e863",
    "metadata": {},
    "outputs": [
     {
@@ -1788,7 +1788,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "2cf27dee",
+   "id": "8c92b786",
    "metadata": {},
    "outputs": [
     {
@@ -1959,8 +1959,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "id": "7be9ff89",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4017175530767336"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# r squared value of the model\n",
+    "model.score(X,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
-   "id": "1e08ac52",
+   "id": "f4c31485",
    "metadata": {
     "scrolled": true
    },
@@ -1988,7 +2012,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "668fea0c",
+   "id": "8004d41d",
    "metadata": {},
    "outputs": [
     {
@@ -2009,7 +2033,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "9670980b",
+   "id": "c542013e",
    "metadata": {},
    "outputs": [
     {
