add coments for scaling for multiple linear regression model

--- a/brewery_outdoor_analysis/machine_learning_mockup.ipynb
+++ b/brewery_outdoor_analysis/machine_learning_mockup.ipynb
@@ -1008,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ce678ade",
+   "id": "8e481fe9",
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b470f899",
+   "id": "81e54127",
    "metadata": {},
    "outputs": [
     {
@@ -1788,7 +1788,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "67a42aa1",
+   "id": "8a5bf524",
    "metadata": {},
    "outputs": [
     {
@@ -1884,7 +1884,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "fefb1022",
+   "id": "b4c13690",
    "metadata": {
     "scrolled": true
    },
@@ -1908,7 +1908,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "14d5552d",
+   "id": "82041480",
    "metadata": {
     "scrolled": true
    },
@@ -1936,7 +1936,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "f2ac8b2f",
+   "id": "582f2e0f",
    "metadata": {},
    "outputs": [
     {
@@ -1957,7 +1957,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "f5f93ddc",
+   "id": "4407f42f",
    "metadata": {},
    "outputs": [
     {
@@ -1976,7 +1976,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "d06cc3d0",
+   "id": "c0f041c9",
    "metadata": {},
    "outputs": [
     {
@@ -2000,7 +2000,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "f7454c82",
+   "id": "07aecba8",
    "metadata": {},
    "outputs": [
     {
@@ -2025,7 +2025,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ecd5ceb",
+   "id": "227522d8",
    "metadata": {},
    "source": [
     "# Multiple Linear Regression"
@@ -2034,7 +2034,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "56ca7398",
+   "id": "942e9d48",
    "metadata": {},
    "outputs": [
     {
@@ -2163,6 +2163,7 @@
     }
    ],
    "source": [
+    "# Remove categorical inputs that are not needed for this model\n",
     "mlr_city_summary = city_summary_top25.drop(columns = [\"city\",\"state\",\"ts_updated\"])\n",
     "mlr_city_summary.head()"
    ]
@@ -2170,7 +2171,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "97a3023f",
+   "id": "cae50df1",
    "metadata": {},
    "outputs": [
     {
@@ -2188,6 +2189,7 @@
     }
    ],
    "source": [
+    "# Get column names to be used when creating scaled df\n",
     "mlr_city_summary_columns = mlr_city_summary.columns\n",
     "mlr_city_summary_columns"
    ]
@@ -2195,7 +2197,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "f5c31ac3",
+   "id": "08d38ea5",
    "metadata": {},
    "outputs": [
     {
@@ -2213,6 +2215,7 @@
     }
    ],
    "source": [
+    "# Get column names without num_outdoor_stores to be used in ColumnTransformer function\n",
     "summary_columns_no_outdoor = mlr_city_summary.columns.drop(\"num_outdoor_stores\")\n",
     "summary_columns_no_outdoor"
    ]
@@ -2220,10 +2223,12 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "d706ae67",
+   "id": "b6ff2b10",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Column names for use in making city_summary_scaled_df \n",
+    "# Since ColumnTransformer function flipped the population and num_outdoor_stores columns, this is reflected in the column names\n",
     "columns = ['mean_income', 'min_income', 'max_income', 'median_income',\n",
     "       'first_quartile_income', 'third_quartile_income', 'num_breweries', \n",
     "           'population', 'num_outdoor_stores']"
@@ -2232,15 +2237,19 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "8a1ec3be",
+   "id": "7e4fb6f3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scale data \n",
+    "# Scale data using StandardScaler and ColumnTransformer\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# features is the dataframe being passed into the ColumnTransformer function\n",
     "features = mlr_city_summary\n",
     "\n",
+    "# ColumnTransformer applys the StandardScaler Function to all columns in the summary_columns_no_outdoor list, \n",
+    "# and passes over any others(num_outdoor_stores)\n",
     "ct = ColumnTransformer([\n",
     "        ('data_scaler', StandardScaler(), summary_columns_no_outdoor)\n",
     "    ], remainder='passthrough')\n",
@@ -2251,7 +2260,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "7d601e05",
+   "id": "5b9f4bf0",
    "metadata": {},
    "outputs": [
     {
@@ -2373,6 +2382,7 @@
     }
    ],
    "source": [
+    "# Create new dataframe with the scaled data, leaving the num_outdoor_stores not scaled since it is out output\n",
     "city_summary_scaled_df = pd.DataFrame(city_summary_scaled, columns = columns)\n",
     "city_summary_scaled_df.head()"
    ]
