created new data_retrieval module to ensure we paginate Yelp API requests

--- a/brewery_outdoor_analysis/misc/data_retrieval.ipynb
+++ b/brewery_outdoor_analysis/misc/data_retrieval.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b149b044",
+   "metadata": {},
+   "source": [
+    "This was the initial notebook created to retrieve data from the Yelp API. We found that we needed to paginate our requests to get the full number of results. Please see `data_retrieval.py` for the updated code."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "af3dcc5d",
