export full_error_df to sql table

--- a/brewery_outdoor_analysis/machine_learning_mockup.ipynb
+++ b/brewery_outdoor_analysis/machine_learning_mockup.ipynb
@@ -1403,7 +1403,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "46d7c596",
+   "id": "84a5c24b",
    "metadata": {},
    "outputs": [
     {
@@ -1558,8 +1558,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "id": "9af6d949",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Export full_error_df to sql table\n",
+    "full_error_df.to_sql(\n",
+    "    'prediction_error', \n",
+    "    con=ENGINE, \n",
+    "    if_exists='replace',\n",
+    "    index=False\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3bc2deb9",
+   "id": "7bf471e8",
    "metadata": {},
    "outputs": [],
    "source": []
